syntax = "proto3";

option csharp_namespace = "SCBS.GrpcClient.Protos";

package schedule;

service ScheduleGrpc{
	rpc GetAllAsync (EmptyRequest) returns (ItemList);

	rpc GetByIdAsync (IdRequest) returns (Item);

	rpc CreateAsync (Item) returns (ActionResult);

	rpc UpdateAsync (Item) returns (ActionResult);
  
	rpc RemoveAsync (IdRequest) returns (ActionResult);
}

message ActionResult {
	int32 status = 1;
	string message = 2;
	ItemList data = 3;
}

message IdRequest {
	string id = 1;
}

message EmptyRequest {
}

message ItemList {
	repeated Item items = 1;
}

message Item {
	string id = 1;
	string userId = 2;
	string workDate = 3;
	string status = 4;
	string createdAt = 5;
	string updatedAt = 6;
	string title = 7;
	string description = 8;
	string location = 9;
	string notes = 10;
}